// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider Slider base demo works fine 1`] = `
<base>
  <t-slider
    colors="{{
      Array [
        "#0052D9",
        "#E7E7E7",
      ]
    }}"
    defaultValue="60"
  />
</base>
`;

exports[`Slider Slider disabled demo works fine 1`] = `
<disabled>
  <t-slider
    colors="{{
      Array [
        "#0052D9",
        "#E7E7E7",
      ]
    }}"
    disabled="{{true}}"
    disabledColor="{{
      Array [
        "#BBD3FB",
        "#E7E7E7",
      ]
    }}"
    value="60"
  />
</disabled>
`;

exports[`Slider Slider label demo works fine 1`] = `
<wx-label>
  <t-slider
    colors="{{
      Array [
        "#0052D9",
        "#E7E7E7",
      ]
    }}"
    label="\${value}"
    value="{{50}}"
    bind:change="handleChange"
  />
</wx-label>
`;

exports[`Slider Slider max demo works fine 1`] = `
<max>
  <t-slider
    colors="{{
      Array [
        "#0052D9",
        "#E7E7E7",
      ]
    }}"
    defaultValue="30"
    label="{{true}}"
    max="{{200}}"
    min="{{30}}"
  />
</max>
`;

exports[`Slider Slider range demo works fine 1`] = `
<range>
  <t-slider
    colors="{{
      Array [
        "#0052D9",
        "#E7E7E7",
      ]
    }}"
    defaultValue="{{
      Array [
        30,
        70,
      ]
    }}"
    label="{{true}}"
    range="{{true}}"
    showExtremeValue="{{true}}"
  />
</range>
`;

exports[`Slider Slider step demo works fine 1`] = `
<step>
  <t-slider
    defaultValue="{{50}}"
    marks="{{
      Object {
        "0": "小",
        "100": "大",
        "50": "中",
      }
    }}"
    step="{{50}}"
    bind:change="handleChange"
  />
</step>
`;

exports[`Slider Slider title demo works fine 1`] = `
<title>
  <wx-view
    class="label"
  >
    <wx-view>
      选择器标题
    </wx-view>
    <t-slider
      class="label-class"
      colors="{{
        Array [
          "#0052D9",
          "#E7E7E7",
        ]
      }}"
      defaultValue="50"
    />
  </wx-view>
</title>
`;
